[package]
name = "lunaris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "9.4.0"
arr_macro = "0.2.1"
derive_more = { version = "1.0.0", default-features = false, features = [
    "constructor",
] }
heapless = "0.8.0"
lock_api = "0.4.12"
numtoa = "0.2.4"
once_cell = { version = "1.19.0", default-features = false }
ringbuf = { version = "0.4.4", default-features = false }
tock-registers = "0.9.0"

[[bin]]
name = "lunaris"
path = "src/root.rs"
test = false
bench = false

[features]
default = []
lab = []

[profile.release]
codegen-units = 1
lto = "fat"
