[package]
name = "lunaris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aarch64-cpu = "10.0.0"
arr_macro = "0.2.1"
derive_more = { version = "2.0.1", default-features = false, features = [
    "constructor",
] }
heapless = "0.9.1"
lock_api = "0.4.13"
numtoa = "0.3.1"
once_cell = { version = "1.21.3", default-features = false }
ringbuf = { version = "0.4.8", default-features = false }
tock-registers = "0.10.0"

[[bin]]
name = "lunaris"
path = "src/root.rs"
test = false
bench = false

[features]
default = []
lab = []

[profile.release]
codegen-units = 1
lto = "fat"
